--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DOCKER_PROJECT_NAME=zarmedqabul
-DOCKER_NGINX_PORT=80
-DOCKER_DATABASE_PORT=3600
-DATABASE_PASSWORD=mkzarmedQabul
+DOCKER_PROJECT_NAME=tgfuqabul_new
+DOCKER_NGINX_PORT=8111
+DOCKER_DATABASE_PORT=3610
+DATABASE_PASSWORD=mktgfuQabu11
+TELEGRAM_CHAT_ID=813225336
+TELEGRAM_BOT_TOKEN=7763858780:AAEu_r9J6eIKFAgE2qhlgIJJi5WieKdw1BE
